--- a/settings.html
+++ b/settings.html
@@ -7,6 +7,7 @@
       src="https://kit.fontawesome.com/545009d5ea.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Settings | Kakao Clone</title>
   </head>
   <body>
