--- a/settings.html
+++ b/settings.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/545009d5ea.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles .css" />
     <title>Settings | Kakao Clone</title>
   </head>
   <body>
@@ -23,24 +23,21 @@
         <i class="fas fa-battery-full"></i>
       </div>
     </div>
-      <header class="header">
-        <div class="header__header-column">
-          <div class="header__back-btn">
-            <a href="more.html">
-            <i class="fas fa-arrow-left fa-2x"></i>
-           </a>
-          </div>
-          <h1 class="header__title">Settigs</h1>
-        </div>
-        <div class="header__header-column">
-          <span class="header__icon">
-            <i class="fas fa-search"></i>
-          </span>
-        </div>
+    <header class="header">
+      <div class="header__header-column">
+        <a href="more.html" class="header__back-btn">
+          <i class="fas fa-arrow-left"></i>
+        </a>
+        <h1 class="header__title">Settigs</h1>
       </div>
-      </header>
-      <main class="settings">
-        <section class="settings__sections">
+      <div class="header__header-column">
+        <span class="header__icon">
+          <i class="fas fa-search"></i>
+        </span>
+      </div>
+    </header>
+    <main class="settings">
+      <section class="settings__sections">
         <ul class="settings_-list">
           <li class="settings__setting">
             <span class="settings__icon">
@@ -62,6 +59,6 @@
           </li>
         </ul>
       </section>
-      </main>
+    </main>
   </body>
 </html>
