--- a/friends.html
+++ b/friends.html
@@ -57,9 +57,9 @@
           <div class="friends__plus">
                 <h5 class="friends__plus-title">Plus Friend</h5>
                 <div class="friends__friend friend">
-                    <div class="friends__column">
+                    <div class="friend__column">
                         <img src="images/children_1.jpg" 
-                        class="g-avatar friend__avatar">
+                        class="friend__avatar">
                         <div class="friend__content">
                             <span class="friend__name">
                                 Plus Friend
@@ -70,10 +70,10 @@
             </div>
           <ul class="friends__list">
               <h5 class="friends__title">Friends 14</h5>
-              <li class="friends__friend friend">
-                  <div class="friends__column">
+              <li class="friends__friend friend friend--lg">
+                  <div class="friend__column">
                     <img src="images/children_1.jpg" 
-                    class="g-avatar friend__avatar">
+                    class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Grace Hwang
