--- a/chat.html
+++ b/chat.html
@@ -25,11 +25,9 @@
     </div>
       <header class="header">
         <div class="header__header-column">
-          <div class="header__back-btn">
-            <a href="index.html">
+           <a href="index.html" class="header__back-btn">
             <i class="fas fa-arrow-left"></i>
            </a>
-          </div>
           <h1 class="header__title">Best Friend</h1>
         </div>
         <div class="header__header-column">
