--- a/find.html
+++ b/find.html
@@ -78,10 +78,10 @@
           <h5 class="find__title">
             Recommended friends
           </h5>
-          <li class="find__friend friend">
-            <div class="friends__column">
+          <li class="find__friend friend friend--lg">
+            <div class="friend__column">
               <img src="images/children_1.jpg" 
-              class="g-avatar friend__avatar">
+              class="friend__avatar">
               <div class="friend__content">
                   <span class="friend__name">
                       Grace Hwang
@@ -93,7 +93,7 @@
                     <i class="fas fa-user-plus"></i>
                 </div>
             </div>
-        </li>
+          </li>
         </ul>
       </main>
     <nav class="nav">
