--- a/friends.html
+++ b/friends.html
@@ -38,7 +38,7 @@
       </div>
       </header>
       <main class="friends">
-          <header class="friends__header">
+          <header class=  "friends__header">
             <div class="friends__friend friend friend--lg">
                 <div class="friend__column">
                     <img src="images/children_1.jpg" 
@@ -55,7 +55,7 @@
             </div>
           </header>
           <div class="friends__plus">
-                <h5 class="friends__plus-title">Plus Friend</h5>
+                <h5 class="friends__title">Plus Friend</h5>
                 <div class="friends__friend friend">
                     <div class="friend__column">
                         <img src="images/children_1.jpg" 
@@ -76,10 +76,10 @@
                     class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
-                            Grace Hwang
+                            Pretty Hwang
                         </span>
                         <span class="friend__status">
-                            beginner
+                            Hello
                         </span>
                     </div>
                   </div>
@@ -87,8 +87,8 @@
                       <div class="friend__now-listening">
                           <span>
                             FTISLAND(FT NomadCoders) 
+                           <i class="fas fa-play"></i>
                           </span>
-                          <i class="fas fa-play"></i>
                       </div>
                   </div>
               </li>
