--- a/find.html
+++ b/find.html
@@ -37,11 +37,11 @@
         </div>
       </div>
       </header>
-      <main class="find__header">
+      <main class="find">
         <header class="find__header">
           <ul class="find__header-list">
             <li class="find__header-btn header-btn">
-              <span class="header-btn icon">
+              <span class="header-btn__icon">
                 <i class="fas fa-qrcode fa-2x"></i>
               </span>
               <span class="header-btn__title">
@@ -49,7 +49,7 @@
               </span>
             </li>
             <li class="find__header-btn header-btn">
-              <span class="header-btn icon">
+              <span class="header-btn__icon">
                 <i class="fas fa-user-plus fa-2x"></i>
               </span>
               <span class="header-btn__title">
@@ -57,7 +57,7 @@
               </span>
             </li>
             <li class="find__header-btn header-btn">
-              <span class="header-btn icon">
+              <span class="header-btn__icon">
                 <i class="fas fa-passport fa-2x"></i>
               </span>
               <span class="header-btn__title">
@@ -65,7 +65,7 @@
               </span>
             </li>
             <li class="find__header-btn header-btn">
-              <span class="header-btn icon">
+              <span class="header-btn__icon">
                 <i class="far fa-envelope fa-2x"></i>
               </span>
               <span class="header-btn__title">
@@ -84,7 +84,7 @@
               class="friend__avatar">
               <div class="friend__content">
                   <span class="friend__name">
-                      Grace Hwang
+                      Beauty Hwang
                   </span>
               </div>
             </div>
