--- a/more.html
+++ b/more.html
@@ -45,7 +45,7 @@
       <main class="more">
         <header class="more__header">
           <div class="friends__friend friend">
-            <div class="friends__column">
+            <div class="friend__column">
               <img src="images/children_1.jpg" 
               class="g-avatar friend__avatar">
               <div class="friend__content">
@@ -92,15 +92,15 @@
           <h5 class="more__title">suggestions</h5>
           <ul class="more__suggestions-list">
             <li class="more__suggestion suggestion">
-            <span class="suggestion_icon">
+            <span class="suggestion__icon">
               <i class="fas fa-quote-right fa-2x"></i>
             </span>
-              <span class="suggestion__title">
+            <span class="suggestion__title">
                 Kakao Story
-              </span>
+            </span>
             </li>
             <li class="more__suggestion suggestion">
-            <span class="suggestion_icon">
+            <span class="suggestion__icon">
               <i class="fas fa-beer fa-2x"></i>
             </span>
               <span class="suggestion__title">
@@ -108,12 +108,12 @@
               </span>
             </li>
             <li class="more__suggestion suggestion">
-            <span class="suggestion_icon">
+             <span class="suggestion__icon">
               <i class="fas fa-gamepad fa-2x"></i>
-            </span>
-              <span class="suggestion__title">
+             </span>
+             <span class="suggestion__title">
                 Friends Gem
-              </span>
+             </span>
             </li>
           </ul>
         </section>
