--- a/settings.html
+++ b/settings.html
@@ -7,13 +7,15 @@
       src="https://kit.fontawesome.com/545009d5ea.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/styles .css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Settings | Kakao Clone</title>
   </head>
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span class="status-bar__clock">13:54</span>
+        <span class="status-bar__clock">
+          13:54
+        </span>
       </div>
       <div class="status-bar__column">
         <i class="fas fa-clock"></i>
@@ -28,7 +30,7 @@
         <a href="more.html" class="header__back-btn">
           <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="header__title">Settigs</h1>
+        <h1 class="header__title">Settings</h1>
       </div>
       <div class="header__header-column">
         <span class="header__icon">
@@ -38,7 +40,29 @@
     </header>
     <main class="settings">
       <section class="settings__sections">
-        <ul class="settings_-list">
+        <ul class="settings__list">
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="fas fa-lock"></i>
+            </span>
+            <span class="settings__title">Privacy</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="far fa-bell"></i>
+            </span>
+            <span class="settings__title">Notifications</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="far fa-user"></i>
+            </span>
+            <span class="settings__title">Friends</span>
+          </li>
+        </ul>
+      </section>
+      <section class="settings__sections">
+        <ul class="settings__list">
           <li class="settings__setting">
             <span class="settings__icon">
               <i class="fas fa-lock"></i>
