--- a/chat.html
+++ b/chat.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>chat | Kakao Clone</title>
   </head>
-  <body>
+  <body class="chats-body">
     <div class="status-bar">
       <div class="status-bar__column">
         <span class="status-bar__clock">13:54</span>
@@ -40,25 +40,21 @@
         </div>
       </div>
     </header>
-    <main class="chat">
+    <main class="chat-screen">
         <ul class="chat__messages">
             <span class="chat__timestamp">Friday, January 11, 2019</span>
             <li class="incoming-message message">
-                <img src="images/children_1.jpg" class="g-avatar message__avatar">
+                <img src="images/children_1.jpg" class="g-avatar friend__avatar">
                 <div class="message__content">
                     <span class="message_author">Best Friend</span>
                     <div class="message_bubble">
                         Congrats I love you!
                     </div>
                 </div>
-                <span class="message__timestamp">
-                    15:30
-                </span>
+                <span class="message__timestamp"></span>
             </li>
-            <li class="sending-message message">
-                <span class="message__timestamp">
-                    15:35
-                </span>
+            <li class="incoming-message message">
+                <span class="message__timestamp"></span>
                 <div class="message__content">
                     <div class="message_bubble">
                         Thank you!
@@ -72,8 +68,10 @@
             <i class="far fa-plus-square"></i>
         </div>
         <div class="chat__write-column">
-            <input type="text" placeholder="Send message" 
-              class="chat__write-input">
+            <input 
+            type="text" 
+            placeholder="Send message" 
+            class="chat__write-input">
         </div>
         <div class="chat__write-column">
             <span class="chat__write-icon">
@@ -83,6 +81,6 @@
                 <i class="fas fa-microphone"></i>
             </span>
         </div>
-    </div>
+      </div>
   </body>
 </html>
