--- a/chat.html
+++ b/chat.html
@@ -44,23 +44,37 @@
         <ul class="chat__messages">
             <span class="chat__timestamp">Friday, January 11, 2019</span>
             <li class="incoming-message message">
-                <img src="images/children_1.jpg" class="g-avatar friend__avatar">
+                <img src="images/children_1.jpg" class="m-avatar message__avatar">
                 <div class="message__content">
-                    <span class="message_author">Best Friend</span>
-                    <div class="message_bubble">
+                    <span class="message__bubble">
                         Congrats I love you!
-                    </div>
+                    </span>
+                    <span class="message__author">Best Friend</span>
                 </div>
-                <span class="message__timestamp"></span>
+            </li>
+            <li class="sent-message message">
+                <div class="message__content">
+                    <span class="message__bubble">
+                        Thank you see you soon!
+                    </span>
+                </div>
             </li>
             <li class="incoming-message message">
-                <span class="message__timestamp"></span>
-                <div class="message__content">
-                    <div class="message_bubble">
-                        Thank you!
-                    </div>
-                </div>
-            </li>
+              <img src="images/children_1.jpg" class="m-avatar message__avatar">
+              <div class="message__content">
+                  <span class="message__bubble">
+                      Congrats I love you!
+                  </span>
+                  <span class="message__author">Best Friend</span>
+              </div>
+          </li>
+          <li class="sent-message message">
+              <div class="message__content">
+                  <span class="message__bubble">
+                      Thank you see you soon!
+                  </span>
+              </div>
+          </li>
         </ul>
     </main>  
     <div class="chat__write">
