--- a/chat.html
+++ b/chat.html
@@ -11,7 +11,8 @@
     <title>chat | Kakao Clone</title>
   </head>
   <body class="chats-body">
-    <div class="status-bar">
+    <div class="header-wrapper">
+     <div class="status-bar">
       <div class="status-bar__column">
         <span class="status-bar__clock">13:54</span>
       </div>
@@ -22,7 +23,7 @@
         <span class="status-bar__battery-level">100%</span>
         <i class="fas fa-battery-full"></i>
       </div>
-    </div>
+     </div>
       <header class="header">
         <div class="header__header-column">
            <a href="index.html" class="header__back-btn">
@@ -40,6 +41,7 @@
         </div>
       </div>
     </header>
+  </div>
     <main class="chat-screen">
         <ul class="chat__messages">
             <span class="chat__timestamp">Friday, January 11, 2019</span>
