--- a/chat.html
+++ b/chat.html
@@ -65,7 +65,7 @@
               <img src="images/children_1.jpg" class="m-avatar message__avatar">
               <div class="message__content">
                   <span class="message__bubble">
-                      Congrats I love you!
+                      You should say "Me too"..
                   </span>
                   <span class="message__author">Best Friend</span>
               </div>
@@ -73,30 +73,29 @@
           <li class="sent-message message">
               <div class="message__content">
                   <span class="message__bubble">
-                      Thank you see you soon!
+                      Yes, I love you too!
                   </span>
               </div>
           </li>
         </ul>
     </main>  
-    <div class="chat__write">
-        <div class="chat__write-column">
-            <i class="far fa-plus-square"></i>
-        </div>
-        <div class="chat__write-column">
-            <input 
+    <div class="chat__write--container">
+      <input 
+            class="chat__write"
             type="text" 
-            placeholder="Send message" 
+            placeholder="Send message"
             class="chat__write-input">
-        </div>
-        <div class="chat__write-column">
-            <span class="chat__write-icon">
-                <i class="far fa-smile-wink"></i>
-            </span>
-            <span class="chat__write-icon">
-                <i class="fas fa-microphone"></i>
-            </span>
-        </div>
+      <div class="chat__icon-left chat__icon">
+        <i class="far fa-plus-square"></i>
+      </div>
+      <div class="chat__icon-right chat__icon">
+        <span class="chat__write-icon">
+          <i class="far fa-smile-wink"></i>
+        </span>
+        <span class="chat__write-icon">
+           <i class="fas fa-microphone"></i>
+        </span>
+      </div>
       </div>
   </body>
 </html>
